<resources>
    <string name="app_name">VigSafe</string>
    <string name="date">Date</string>
    <string name="temperature">Temperature</string>
    <string name="productType">Product Type</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_done">DONE</string>
    <string name="button_save">SAVE TO FILE</string>
    <string name="button_correct">CORRECT</string>
    <string name="button_go_back">BACK</string>
    <string name="managerTextButton">Enter as a Manager</string>
    <string name="employeeTextButton">Enter as an employee</string>
    <string name="welcomeMessage">Welcome to Vigsafe App</string>
    <string name="reportInstructions">Insert date to find a report.</string>
    <string name="reportHint">dd/mm/aaaa</string>
    <string name="reportGetButton">GET REPORT</string>
    <string name="tableColumnProduct">Product Type</string>
    <string name="tableColumnTemperature">Temperature</string>
    <string name="tableColumnDate">Date</string>
    <string name="menuInstructions">Insert a new item to be measured</string>
    <string name="menuProductType">Insert a new product type</string>
    <string name="menuProductDescription">Insert a new description</string>
    <string name="menuPicture">INSERT IMAGE</string>
    <string name="insertMenuAlertProductType">Insert a product type to continue.</string>
    <string name="insertMenuAlertProductDescription">Insert a product description to continue.</string>
    <string name="dbnotfoundAlertProductType">This product type does not exist.</string>
    <string name="dbnotfoundAlertProductDescription">This product description does not exist.</string>
    <string name="menuDeleteInstructions">Chose a product type or description to delete an item.</string>
    <string name="menuDeleteProductType">Product type</string>
    <string name="menuDeleteProductDescription">Product description</string>
    <string name="deleteMenuSuccess">Successfully Deleted</string>
    <string name="deleteMenuFail">Product not found at database :(</string>
    <string name="tableDeleteProduct">Product to be deleted</string>
    <string name="tableDeleteDescription">Description</string>
    <string name="ButtontableGetProduct">GET PRODUCT</string>
    <string name="ButtontableDeleteDB">DELETE ITEM</string>
    <string name="somthingWrong">Something went wrong</string>
    <string name="FileSavedToDownload">File saved at downloads folder</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="userexist">User already exist!</string>
    <string name="nulluserorpassword">User null or password shoter than 5 characters</string>
    <string name="success">Successfully Registered</string>
    <string name="registernewuser">Manage new users</string>
    <string name="deleteuser">Delete User</string>
    <string name="userdeletemessage">Confirm the user name and function and press trash button.</string>


    <string-array name="functions">
        <item>Employee</item>
        <item>Manager</item>
        <item>SuperUser</item>
    </string-array>
</resources>